updaing our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I will be a software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Summerville, SC</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Running, Backpacking, Camping, Archery</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Don't know yet</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Sandy Sptings, GA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>1. This stuff seems like wizardry to me.  I have to understand it!
+        2. Endless possibilites for application of the skillset.
+        3. I think I'll be good at it.
+      </p>
     </section>
 
     <footer id="footer">
