Correcting Sandy Sptings spelling error

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>What's your dream job?</h1>
       <p>Don't know yet</p>
       <h1>Where do you live?</h1>
-      <p>Sandy Sptings, GA</p>
+      <p>Sandy Springs, GA</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>1. This stuff seems like wizardry to me.  I have to understand it!
         2. Endless possibilites for application of the skillset.
